# dslam_open

./: README.md  dependencies.yaml
dslam/: CMakeLists.txt  package.xml
dslam/include/dslam/: dataset_parser.h  kitti_parser.h  orb.h  orb_matcher.h  positions.h  process_verification_request.h  sim_3_solver.h  stata_parser.h  verify_geometry.h
dslam/launch/: rectify_stata.launch
dslam/matlab/: .gitignore  acceptMatchIfConsistent.m  alignTrajs.m  areFramesWithinRange.m  areMatchesConsistent.m  assignClusterCenters.m  consistentlyApplyState.m  countBetweenRobotLinks.m  decentr_sim.m  evalAccuracy.m  filesWithExt.m  fixR.m  fixT.m  generateDecentrFrameStream.m  generateVerificationRequests.m  getConnectedAccuracy.m  getConnectedAte.m  getDistGaussSeidelStats.m  getNetVladFeats.m  getParamStudyLines.m  getVOData.m  gtsamFrameId.m  gtsamFrameIdToIndices.m  initDecentrState.m  initOptHandle.m  inspectGeoVerification.m  isrot.m  makeVerificationRequest.m  manageAsyncGaussSeidel.m  param_studies.m  parseAllData.m  parseVerificationResponse.m  plot3DSubGraph.m  plotAccuracy.m  plotDataOverTime.m  plotDataPerRobotPair.m  plotDecentrState.m  plotG2oOutput.m  plotGeoverError.m  plotGeoverErrorNoRot.m  (+26 more)
dslam/rviz/: step_ransac.rviz
dslam/src/: batch_process_verification_request.cpp  dataset_to_vo.cpp  kitti_parser.cpp  orb_matcher.cpp  process_verification_request.cpp  sim_3_solver.cpp  stata_parser.cpp  stata_unbag.py  verification_request_server.cpp  verify_geometry.cpp
rpg_common/: CMakeLists.txt  package.xml
rpg_common/include/rpg_common/: aligned.h  callback_host.h  cv_to_eigen.h  cv_type.h  each.h  eigen_to_cv.h  fs.h  gnuplot.h  hamming_distance.h  load.h  main.h  pose.h  select.h  sim3.h  stream_utility.h  time_enforcer.h  vector_to_eigen.h
rpg_common/src/: cv_type.cpp  fs.cpp  gnuplot.cpp  hamming_distance.cpp  time_enforcer.cpp
rpg_common_ros/: CMakeLists.txt  package.xml
rpg_common_ros/include/rpg_common_ros/: publish.h  publish_inl.h  visualize.h
rpg_common_ros/src/: publish.cpp  visualize.cpp
