<!-- 
Copyright (C) 2017-2018 Titus Cieslewski, RPG, University of Zurich, 
  Switzerland
  You can contact the author at <titus at ifi dot uzh dot ch>
Copyright (C) 2017-2018 Davide Scaramuzza, RPG, University of Zurich, 
  Switzerland

This file is part of dslam_open.

dslam_open is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

dslam_open is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with dslam_open. If not, see <http://www.gnu.org/licenses/>.
-->
<?xml version="1.0"?>
<package format="2">
  <name>rpg_common_ros</name>
  <version>0.0.0</version>
  <description>
    Common ROS C++11 code for RPG.
  </description>

  <author>Titus Cieslewski</author>
  <maintainer email="titus@ifi.uzh.ch">Titus Cieslewski</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>rpg_common</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

</package>
